apps/base/calibre-web/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre-web
  labels:
    app.kubernetes.io/name: calibre-web
spec:
  type: ClusterIP
  selector:
    app: calibre-web
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      protocol: TCP
